Dataset splitting, bugs fixed, user friendliness

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@ EnergySpectrum_NeutronsCompton.png
 EnergySpectrum_NoNeutrons.png
 EnergySpectrum_NoNeutronsCompton.png
 EnergySpectrumStacked_NoNeutrons.png
+condor-321.err
+condor-321.log
+condor-321.out
+condor-323.err
+condor-323.log
+condor-323.out
