--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,11 @@ results/**/*.npz
 results/**/*.npy
 results/**/*.txt
 condor
+EnergyNeutronHist_Neutrons.png
+EnergyNeutronHist_NoNeutrons.png
+EnergySpectrum_Neutrons.png
+EnergySpectrum_NeutronsCompton.png
+EnergySpectrum_NoNeutrons.png
+EnergySpectrum_NoNeutronsCompton.png
+EnergySpectrumStacked_Neutrons.png
+EnergySpectrumStacked_NoNeutrons.png
