--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /datasets
 /results
 /condor
+/datasets_0
 
 # ignore .png, .root, .npz and .npy in results subdirectory
 # files are too large and too many to properly comit
