--- a/.gitignore
+++ b/.gitignore
@@ -15,19 +15,7 @@ results/**/*.root
 results/**/*.npz
 results/**/*.npy
 results/**/*.txt
-condor
-EnergyNeutronHist_Neutrons.png
-EnergyNeutronHist_NoNeutrons.png
-EnergySpectrum_Neutrons.png
-EnergySpectrum_NeutronsCompton.png
-EnergySpectrum_NoNeutrons.png
-EnergySpectrum_NoNeutronsCompton.png
-EnergySpectrumStacked_Neutrons.png
-EnergySpectrumStacked_NoNeutrons.png
+*.png
+*.log
 datasets
 results
-datasets_0
-EnergySpectrum_Photons.png
-EnergySpectrum_PhotonsCompton.png
-EnergySpectrumStacked_Photons.png
-continuousNeutronUpdate.log
