--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,6 @@ condor
 datasets
 datasets_0
 datasets_old
-EnergySpectrumStacked_Photons.png
-EnergySpectrum_PhotonsCompton.png
-EnergySpectrum_Photons.png
-continuousNeutronUpdate.log
+*.png
+*.log
+results
