added debug files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,9 @@ datasets_old
 results
 .vscode/settings.json
 condor_tester.py
-dataset_concatenator.py
-dataset_concatenator1.py
 number_of_clusters.npy
 sipm_positions.npy
 sipms_per_cluster.npy
 verify_shapes.py
+_archive/*
+debug_datasets/*
