--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,33 @@
 # dev related (pycharm specific gitignore)
 .idea
 *.pyc
+# ignore all python bytecode files
+__pycache__
+*.pyo
+*.pyd
+*.nbc
+*.nbi
 
 # data storage directories
 /root_files/*
 /datasets/*
+/results/*
 
 # ignore .png, .root, .npz and .npy in results subdirectory
 # files are too large and too many to properly comit
-results/**/*.png
-results/**/*.root
-results/**/*.npz
-results/**/*.npy
-results/**/*.txt
 condor
 datasets
-datasets_0
-datasets_old
 *.png
 *.log
-results
+*.root
+*.npz
+*.npy
+*.h5
+*.csv
+*.json
+*.txt
+*.yaml
+*.xml
+*.keras
 .vscode/settings.json
-condor_tester.py
-number_of_clusters.npy
-sipm_positions.npy
-sipms_per_cluster.npy
-verify_shapes.py
-_archive/*
-debug_datasets/*
+
